Tiles and Features Styled

--- a/index.html
+++ b/index.html
@@ -28,19 +28,31 @@
             <div class='tile'>
                 <h1>Search</h1>
 
-                <img src='./images/loupe.svg' alt='Magnifying Glass' />
+                <div class='tile-content'>
+                    <p>Search For Your Favorite Movies</p>
+           
+                    <img src='./images/loupe.svg' alt='Magnifying Glass' />
+                </div>
             </div>
 
             <div class='tile'>
                 <h1>Schedule</h1>
 
-                <img src='./images/calendar.svg' alt='calendar' />
+                <div class='tile-content'>
+                    <p>Schedule A Time To View The Film</p>
+
+                    <img src='./images/calendar.svg' alt='calendar' />
+                </div>
             </div>
 
             <div class='tile'>
                 <h1>Text</h1>
 
-                <img src='./images/smartphone.svg' alt='Smartphone Vibrating' />
+                <div class='tile-content'>
+                    <p>Receive An SMS Reminder Sent Directly to Your Phone</p>
+
+                    <img src='./images/smartphone.svg' alt='Smartphone Vibrating' />
+                </div>
             </div>
         </section>
 
