Footer Styled and Updated

--- a/index.html
+++ b/index.html
@@ -82,11 +82,26 @@
 
         <footer>
             <div>
-                some kind of footer stuff
+                <p>
+                    This app is made as a Full Stack Web Development Portfolio Project,
+                        the creator of this application grants full usage to any registered
+                        user of the site, but relinquishes any responsibility for information
+                        of the user.
+                </p>
             </div>
 
             <div>
-                Some more footer stuff
+                <p>
+                    Please view the <a href='#'>Credits</a> Page for more information about the app,
+                        codebase, developer, and assests and their creators. If haven't already click 
+                        <a href='#'>here</a> or the Sign Up button at the top of the page to view the 
+                        full application. Guest Users can sign in using
+                </p>
+
+                <br />
+                <p><span>Username:</span> Guest</p>
+
+                <p><span>Password:</span> password</p>
             </div>
         </footer>
     </body>
