credits file created and linked to index

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <div>
                 <p>
-                    Please view the <a href='#'>Credits</a> Page for more information about the app,
+                    Please view the <a href='./credits.html'>Credits</a> Page for more information about the app,
                         codebase, developer, and assests and their creators. If haven't already click 
                         <a href='#'>here</a> or the Sign Up button at the top of the page to view the 
                         full application. Guest Users can sign in using
