LESS Modules Created, CTA added to Index

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                 </p>
             </div>
 
+            <a class='features-link' href='#'>Try It Out!</a>
+
             <div class='features-panel'>
                 <img src='./images/rating.svg' alt='5 Gold Stars in an Arc' />
 
