Links Updated to Live Front ENd

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                     </li>
                     
                     <li>
-                        <a href="#">LogIn</a>
+                        <a href="https://textflix-fe.herokuapp.com/">LogIn</a>
                     </li>
                     
                     <li>
-                        <a href="#">Sign Up</a>
+                        <a href="https://textflix-fe.herokuapp.com/register">Sign Up</a>
                     </li>
                 </ul>
             </nav>
@@ -38,7 +38,7 @@
                     <h2>Never Forget A Viewing</h2>
                 </div>
 
-                <a href='#'>
+                <a href='https://textflix-fe.herokuapp.com/register'>
                     Sign Up
                 </a>
             </div>
@@ -90,7 +90,7 @@
                 </p>
             </div>
 
-            <a class='features-link' href='#'>Try It Out!</a>
+            <a class='features-link' href='https://textflix-fe.herokuapp.com/register'>Try It Out!</a>
 
             <div class='features-panel'>
                 <img src='./images/rating.svg' alt='5 Gold Stars in an Arc' />
@@ -116,7 +116,7 @@
                 <p>
                     Please view the <a href='./credits.html'>Credits</a> Page for more information about the app,
                         codebase, developer, and assests and their creators. If haven't already click 
-                        <a href='#'>here</a> or the Sign Up button at the top of the page to view the 
+                        <a href='https://textflix-fe.herokuapp.com/register'>here</a> or the Sign Up button at the top of the page to view the 
                         full application. Guest Users can sign in using
                 </p>
 
